Refactoring to simplify AST exploration